--- a/app/containers/Main/Styles.css
+++ b/app/containers/Main/Styles.css
@@ -1,3 +1,7 @@
+.teamtune-menu{
+  background:#1d2844 !important;
+}
+
 .bm-burger-button {
   position: fixed;
   width: 20px;
@@ -13,8 +17,7 @@
 
 /* Position and sizing of clickable cross button */
 .bm-cross-button {
-  height: 24px;
-  width: 24px;
+  display:none;
 }
 
 /* Color/shape of close button cross */
