--- a/app/containers/ProjectsList/Styles.css
+++ b/app/containers/ProjectsList/Styles.css
@@ -6,9 +6,11 @@ input#description{
   width:100%;
 }
 input[type="text"]:focus,
+input[type="password"]:focus,
 textarea:focus{
   outline:none;
 }
+input[type="password"],
 input[type="text"],
 textarea
 {
