--- a/app/containers/BoardsList/Styles.css
+++ b/app/containers/BoardsList/Styles.css
@@ -1,11 +1,11 @@
 
-    @media only screen and (min-width: 0px) {
+    @media only screen and (max-width: 499px) {
     .boardBlock{
         width:100%;
     }
 }
 
-    @media only screen and (min-width: 500px) {
+    @media only screen and (min-width: 500px) and (max-width: 1199px) {
     .boardBlock{
         width:50%;
     }
