--- a/app/containers/Main/Styles.css
+++ b/app/containers/Main/Styles.css
@@ -32,7 +32,7 @@
 
 /* General sidebar styles */
 .bm-menu {
-  background: #373a47;
+  background: #203b46;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
 }
