--- a/app/containers/BoardsList/Styles.css
+++ b/app/containers/BoardsList/Styles.css
@@ -49,7 +49,8 @@
       border-top-right-radius: 5px;
       border-top-left-radius: 5px;
     }
-    .boardBlock .create input{
+    .boardBlock .create input,
+    .boardBlock .create textarea{
       border: 2px solid #00b4ff;
     }
     .boardBlock > div.title input{
@@ -66,8 +67,7 @@
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.newForm {
-    max-width:100%;
+.tasks .newForm {
     border: 2px solid gray;
     color: gray;
 }
